# automotive

./: .envrc  README.md  app.py  appscript-code.js  main.py  pyproject.toml  requirements.txt
.github/workflows/: pullrequest.yml
api/: index.py
automation/: array_join.py  automation_executor.py  call_api.py  conditional_break.py  eval.py  read_html.py  sample_code.py
automation/tests/: test_sample_code.py
cron/: cron_executer.py
utils/: gsheet.py
