[tool.poetry]
name = "automotive"
version = "0.1.0"
description = ""
authors = ["nadeemcite <nady5730642@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
gspread = "^6.1.2"
python-dotenv = "^1.0.1"
lxml = "^5.2.2"
oauth2client = "^4.1.3"
flake8 = "^7.1.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
